Add server dependencies

--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
-  "name": "react-apollo-graphql-jwt-starter",
+  "name": "react-apollo-graphql-jwt-koa",
   "version": "1.0.0",
-  "description": "Apollo-graphql backend api with mongo, jwt, react, redux",
+  "description": "development",
   "scripts": {
-    "start": "node server.js",
-    "start-api": "nodemon api/index.js --watch api --exec babel-node",
-    "prebuild": "rimraf dist",
-    "build": "cross-env NODE_ENV=production webpack -p --optimize-dedupe --config webpack.prod.config.js",
-    "eslint": "eslint ."
+    
   },
   "keywords": [
     "react",
@@ -17,14 +13,10 @@
     "jwt",
     "webpack"
   ],
-  "author": "will.chen",
-  "license": "MIT",
-  "dependencies": {
-    "apollo-client": "^1.0.4",
-    "bcrypt-nodejs": "^0.0.3",
-    "body-parser": "^1.17.1"
+  "engines": {
+    "node": "7.6.0",
+    "npm": "4.1.2"
   },
-  "devDependencies": {
-
-  }
+  "author": "weihanchen",
+  "license": "MIT"
 }
