--- a/server/package.json
+++ b/server/package.json
@@ -13,14 +13,21 @@
     "graphql": "^0.9.3",
     "graphql-server-koa": "^0.7.2",
     "graphql-subscriptions": "^0.3.1",
+    "import-dir": "^0.0.1",
     "jsonwebtoken": "^7.3.0",
     "kcors": "^1.3.2",
     "koa": "^2.2.0",
     "koa-bodyparser": "^4.2.0",
+    "koa-compose": "^4.0.0",
+    "koa-logger": "^2.0.1",
+    "koa-passport": "^3.0.0",
     "koa-router": "^7.1.1",
-    "mongoose": "^4.9.5"
+    "mongoose": "^4.9.5",
+    "passport-jwt": "^2.2.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.6.5",
+    "babel-core": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.24.1",
