--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "koa-logger": "^2.0.1",
     "koa-passport": "^3.0.0",
     "koa-router": "^7.1.1",
+    "moment": "^2.18.1",
     "mongoose": "^4.9.5",
     "passport-jwt": "^2.2.1"
   },
