--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "eslint": "^3.19.0",
     "nodemon": "^1.11.0"
   }
