--- a/client/package.json
+++ b/client/package.json
@@ -4,23 +4,38 @@
   "author": "weihanchen",
   "license": "MIT",
   "devDependencies": {
-    "react-scripts": "0.9.5",
-    "redux-devtools": "^3.3.1"
+
   },
   "dependencies": {
     "apollo-client": "^1.2.2",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.1",
+    "formsy-material-ui": "^0.6.0",
+    "formsy-react": "^0.19.2",
     "graphql-tag": "^2.0.0",
+    "history": "^4.6.1",
+    "html-webpack-plugin": "^2.28.0",
+    "json-loader": "^0.5.4",
+    "material-ui": "^0.18.0",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-apollo": "^1.2.0",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
-    "redux": "^3.6.0"
+    "react-router-dom": "^4.1.1",
+    "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
+    "sass-loader": "^6.0.5",
+    "style-loader": "^0.17.0",
+    "webpack": "^2.5.1",
+    "webpack-dev-server": "^2.4.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+     "dev": "webpack-dev-server --inline --devtool eval --progress --colors --hot --content-base ../public"
   }
 }
