--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.28.1",
+    "file-loader": "^0.11.1",
     "formsy-material-ui": "^0.6.0",
     "formsy-react": "^0.19.2",
     "graphql-tag": "^2.0.0",
@@ -21,6 +23,7 @@
     "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
     "material-ui": "^0.18.0",
+    "node-sass": "^4.5.2",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-apollo": "^1.2.0",
@@ -30,8 +33,10 @@
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
+    "redux-observable": "^0.14.1",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.17.0",
+    "url-loader": "^0.5.8",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5"
   },
