--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-observable": "^0.14.1",
+    "rxjs": "^5.4.0",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.17.0",
     "url-loader": "^0.5.8",
