--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "webpack-dev-server": "^2.4.5"
   },
   "scripts": {
-    "dev": "webpack-dev-server --inline --devtool eval --progress --colors --hot --content-base ../public"
+    "dev": "webpack-dev-server --inline --devtool eval --progress --colors --hot --content-base ../public",
+    "build": "webpack"
   }
 }
