--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "koa-logger": "^2.0.1",
     "koa-passport": "^3.0.0",
     "koa-router": "^7.1.1",
+    "koa-static-folder": "^0.1.6",
     "moment": "^2.18.1",
     "mongoose": "^4.9.5",
     "passport-jwt": "^2.2.1"
@@ -30,7 +31,7 @@
     "babel-cli": "^6.6.5",
     "babel-core": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "eslint": "^3.19.0",
