--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
 
 before_script:
 - sleep 15
-- mongo user_auth_demo --eval 'db.addUser("travis", "test");'
+- mongo user_auth_demo --eval 'db.createUser("travis", "test");'
 - npm run install:dependence
 
 script:
