--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.28.1",
     "file-loader": "^0.11.1",
